2010-03-06  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=30895
        [Gtk] The accessible hierarchy of tables is significantly incorrect for Atk

        * platform/gtk/accessibility/table-hierarchy.html: Added.
        * platform/gtk/accessibility/table-hierarchy-expected.txt: Added.
2010-03-06  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=30895
        [Gtk] The accessible hierarchy of tables is significantly incorrect for Atk

        This completes the fixing of the Atk table hierarchy which was started
        in bug #35418.

        * accessibility/gtk/AccessibilityObjectAtk.cpp:
        (AccessibilityObject::accessibilityPlatformIncludesObject):
        * accessibility/AccessibilityRenderObject.cpp:
        (AccessibilityRenderObject::determineAccessibilityRole):

Canonical link: https://commits.webkit.org/46920@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55623 268f45cc-cd09-0410-ab3c-d52691b4dbfc